fix(sonar): resolve backend and frontend quality findings